fixed scaling issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -76,4 +76,8 @@ body {
         height: 33%;
         font-size: 10vw;
     }
+    .column:active {
+        transform: scale(1.1);
+        transition: all .3s ease-in-out;
+    }
 }
